--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -12,7 +12,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-  font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 400 17px/1.75 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #111;
   background-color: #fdfdfd;
   -webkit-text-size-adjust: 100%;
@@ -59,7 +59,7 @@ figure > img {
 }
 
 figcaption {
-  font-size: 14px;
+  font-size: 14.875px;
 }
 
 /**
@@ -109,7 +109,7 @@ blockquote {
   color: #828282;
   border-left: 4px solid #e8e8e8;
   padding-left: 15px;
-  font-size: 18px;
+  font-size: 19.125px;
   letter-spacing: -1px;
   font-style: italic;
 }
@@ -122,7 +122,7 @@ blockquote > :last-child {
  */
 pre,
 code {
-  font-size: 15px;
+  font-size: 15.9375px;
   border: 1px solid #e8e8e8;
   border-radius: 3px;
   background-color: #eef;
@@ -217,16 +217,15 @@ table td {
  * Site header
  */
 .site-header {
-  border-top: 5px solid #424242;
   border-bottom: 1px solid #e8e8e8;
   min-height: 55.95px;
   position: relative;
 }
 
 .site-title {
-  font-size: 26px;
+  font-size: 27.625px;
   font-weight: 300;
-  line-height: 54px;
+  line-height: 66.9375px;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
@@ -237,7 +236,7 @@ table td {
 
 .site-nav {
   float: right;
-  line-height: 54px;
+  line-height: 66.9375px;
 }
 .site-nav .nav-trigger {
   display: none;
@@ -247,7 +246,7 @@ table td {
 }
 .site-nav .page-link {
   color: #111;
-  line-height: 1.5;
+  line-height: 1.75;
 }
 .site-nav .page-link:not(:last-child) {
   margin-right: 20px;
@@ -309,7 +308,7 @@ table td {
 }
 
 .footer-heading {
-  font-size: 18px;
+  font-size: 19.125px;
   margin-bottom: 15px;
 }
 
@@ -320,7 +319,7 @@ table td {
 }
 
 .footer-col-wrapper {
-  font-size: 15px;
+  font-size: 15.9375px;
   color: #828282;
   margin-left: -15px;
 }
@@ -373,11 +372,11 @@ table td {
 }
 
 .page-heading {
-  font-size: 32px;
+  font-size: 34px;
 }
 
 .post-list-heading {
-  font-size: 28px;
+  font-size: 29.75px;
 }
 
 .post-list {
@@ -389,13 +388,13 @@ table td {
 }
 
 .post-meta {
-  font-size: 14px;
+  font-size: 14.875px;
   color: #828282;
 }
 
 .post-link {
   display: block;
-  font-size: 24px;
+  font-size: 25.5px;
 }
 
 /**
@@ -406,13 +405,13 @@ table td {
 }
 
 .post-title {
-  font-size: 42px;
+  font-size: 44.625px;
   letter-spacing: -1px;
   line-height: 1;
 }
 @media screen and (max-width: 800px) {
   .post-title {
-    font-size: 36px;
+    font-size: 38.25px;
   }
 }
 
@@ -420,27 +419,27 @@ table td {
   margin-bottom: 30px;
 }
 .post-content h2 {
-  font-size: 32px;
+  font-size: 34px;
 }
 @media screen and (max-width: 800px) {
   .post-content h2 {
-    font-size: 28px;
+    font-size: 29.75px;
   }
 }
 .post-content h3 {
-  font-size: 26px;
+  font-size: 27.625px;
 }
 @media screen and (max-width: 800px) {
   .post-content h3 {
-    font-size: 22px;
+    font-size: 23.375px;
   }
 }
 .post-content h4 {
-  font-size: 20px;
+  font-size: 21.25px;
 }
 @media screen and (max-width: 800px) {
   .post-content h4 {
-    font-size: 18px;
+    font-size: 19.125px;
   }
 }
 
@@ -644,6 +643,34 @@ table td {
 }
 .highlight .il {
   color: #099;
+}
+
+.float-left {
+  float: left;
+  margin-top: 10px;
+  margin-right: 20px;
+  width: 60%;
+}
+
+.float-right {
+  float: right;
+  margin-top: 10px;
+  margin-left: 20px;
+  width: 60%;
+}
+
+.float-40 {
+  width: 40%;
+}
+
+.float-right img,
+.float-left img {
+  width: 100%;
+}
+
+.img-caption {
+  font-style: italic;
+  font-size: smaller;
 }
 
 /*# sourceMappingURL=main.css.map */
