custom header, interrail

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -25,3 +25,14 @@
   font-style: italic;
   font-size: smaller;
 }
+
+@media only screen and (max-width: 600px) {
+  .float-right {
+      width: 100%;
+      margin-bottom: 10px;
+  }
+  .float-left {
+      width: 100%;
+      margin-bottom: 10px;
+  }
+}
