--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -683,11 +683,25 @@ table td {
     margin-bottom: 10px;
   }
 }
-table td:first-child {
+table.trip td:first-child {
   font-weight: bold;
   vertical-align: top;
   padding-right: 25px;
   white-space: nowrap;
+}
+
+table.daily td {
+  padding: 5px;
+}
+table.daily td:first-child {
+  text-align: right;
+  font-weight: bold;
+}
+table.daily td:nth-child(2), table.daily td:nth-child(3) {
+  text-align: center;
+}
+table.daily td:nth-child(4) {
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=main.css.map */
